2018-09-28  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (env): Correct R CMD check option to --no-vignettes

2018-09-27  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

	* inst/include/Rcpp/date_datetime/Date.h: Remove the empty destructor
	to make g++-9 (prerelease) happy [CRAN request]

	* inst/unitTests/runit.Matrix.R: Correct typo

2018-09-27  Romain Francois  <romain@rstudio.com>

	* inst/include/Rcpp/vector/Matrix.h: Fix Matrix(no_init(int,int))
	constructor
	* inst/unitTests/runit.Matrix.R: test for above
	* inst/unitTests/cpp/Matrix.cpp: same

2018-09-26  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Set env var RunAllRcppTests=yes
	* .travis.yml: Do not set env var here as needed in Docker

2018-09-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.19
        * inst/NEWS.Rd: Idem
        * inst/bib/Rcpp.bib: Idem
        * vignettes/Rcpp.bib: Idem
        * inst/include/Rcpp/config.h: Idem

	* R/RcppLdpath.R (RcppLdPath, RcppLdFlags, CxxFlags, RcppCxx0xFlags):
	After discussion with CRAN, do not mark as .Deprecated() as too many
	packages are involved. This will need to be phased in more slowly.

2018-09-20  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-FAQ.Rmd: Set 'eval=FALSE' on another
	RcppArmadillo example to not create a build-time dependency

2018-09-18  JJ Allaire  <jj@rstudio.com>

	* src/attributes.cpp: Add support for [[Rcpp::init]] attribute
	* vignettes/Rcpp-attributes.Rmd: Documentation for [[Rcpp::init]]
	attribute

2018-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/r/headers.h: Define STRICT_R_HEADERS, but until
	September 2019 protect by defining RCPP_NO_STRICT_HEADERS

	* .travis.yml (env): Switch to rcpp/ci for ci use

2018-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Move Dockerfile to docker/ci
	* docker/run/Dockerfile: Add deployment Dockerfile